src/mock-data/data/_.kube-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"name":"kube-system","namespace":""}}
  creationTimestamp: "2019-11-11T21:19:38Z"
  name: kube-system
  labels:
    name: kube-system  
  resourceVersion: "211"
  selfLink: /api/v1/namespaces/kube-system
  uid: f7b5be00-04c8-11ea-bc78-42010a8a0172
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
