src/mock-data/data/data-network-policy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"backend-network-pol","namespace":"net-policy-sample"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"frontend"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"backend"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2020-09-08T18:35:32Z"
    generation: 2
    name: backend-network-pol
    namespace: net-policy-sample
    resourceVersion: "103370146"
    selfLink: /apis/networking.k8s.io/v1/namespaces/net-policy-sample/networkpolicies/backend-network-pol
    uid: 49f8332a-1ba6-4133-a45b-66a0db75ffdc
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: frontend
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: backend
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"db-network-pol","namespace":"net-policy-sample"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"backend"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"db"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2020-09-08T18:35:28Z"
    generation: 2
    name: db-network-pol
    namespace: net-policy-sample
    resourceVersion: "103370173"
    selfLink: /apis/networking.k8s.io/v1/namespaces/net-policy-sample/networkpolicies/db-network-pol
    uid: 4f5892e1-76b0-47b0-8077-7f4ae92e07f2
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: backend
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: db
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
